<resources>
    <string name="app_name">Music Studio</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--<string name="action_settings">Settings</string>-->

    <string name="find">FIND YOUR MUSIC STUDIO</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>

    <string name="tracking">TRACKING</string>
    <string name="mixing">MIXING</string>
    <string name="mastering">MASTERING</string>

<string name="tracking_string">
    Tracking atau ‘Take’ merupakan sebuah kegiatan merekam sebuah suara dari beberapa instrument musik yang ada didalam sebuah lagu,
    yang nantinya secara teknis suara instumen musik tersebut dari suara analog akan diubah menjadi bentuk digital dengan bantuan suatu
    device berupa SoundCard dan tentunya juga mengguanakan software pengolah musik seperti Adobe Audition, Nuendo, Cibase, Ableton, dll.
    </string>
<string name="tracking_string2">Dalam proses rekaman atau recording perlu memperhatikan alat alat yang digunakan untuk recording serta
    situasi tempat sangat disarankan pada ruangan yang kedap suara guna untuk mengurangi noise saat proses recording.
    Semakin kecil noise dari sebuah lagu, semakin jernih pula lagu yang akan di hasilkan.
    Selain tempat, kita juga harus memperhatikan tempo saat recording, karena bila kita merekam satu persatu dari sebuah instrument
    tanpa adanya metronome makan kemungkinan besar track ke 2 yang kita kita rekam akan berbeda
    dan mengakibatkan tidak samanya tempo pada track 1 dan 2. Maka disarankan saat proses rekaman perlunya metronome.
</string>

    <string name="mixing_string">
    Mixing. Sesuai dengan namanya, mix = campur, mixing = mencampur. Yang di campur di sini adalah track - track audio yang ingin di gabung
        Misalnya : Track Gitar, Track Vokal, Track Bass, Dan Track Drum (Biasanya track drum di pecah lagi menjadi track snare, kick, tomb, hihat, dan overhead dll)
    </string>
    <string name="mixing_string1">Apa saja yang dilakukan saat Mixing ?</string>
    <string name="mixing_string2">1. Hal paling utama dari proses mixing adalah Balancing atau menyeimbangkan volume antar track sehingga semua track terdengar sesuai dengan yang di inginkan.
        Bayangkan jika anda mendengar musik yang suara kick drum menutupi track audio lainnya pasti anda langsung menghapus musik tersebut dari kompi anda.
</string>
    <string name="mixing_string3">2. Equalizing (eq-ing, jika anda mendengar misalnya suara vokal yang bergemuruh maka disini tugas sang EQ.
        EQ berfungsi untuk meng-Cut dan mem-Bost frekwensi yang kita inginkan.
        Proses Equalisasi dapat membentuk karakter suatu Audio menjadi yang kita inginkan.
</string>
    <string name="mixing_string4">3. Compressing, compressing adalah proses perataan suatu audio yang memiliki dinamic range yang tinggi,
        Misalnya : Vokal pada saat bernyanyi di nada rendah maka otomatis suaranya juga akan menjadi pelan,
        dan ketika vokalis bernyanyi dengan nada tinggi otomatis powernya semakin kencang sehingga dinamic range audio vokal ini
        menjadi naik turun. Dari kasus ini dapat diatasi dengan proses Compresing.
</string>
    <string name="mixing_string5">4. Pemberian effect, proses ini jika di andaikan pada lomba menggambar anak TK adalah proses pewarnaan,
        contohnya, misalnya vokal yang terasa kering di beri effect Reverb, Chorus, Delay dll sesuai selera.
</string>

    <string name="mastering_string">
 Proses mastering yang sering disebut orang sebenarnya lebih tepat dikatakan sebagai Pre Mastering. Namun dalam kenyataannya orang lebih cenderung
        mengatakannya sebagai Mastering daripada Pre Mastering. Secara natural istilah Pre Mastering inipun berubah menjadi Mastering.
    Mastering adalah tahap akhir dalam proses sebuah musik. Mastering dalam bahasa yang sederhana dapat dikatakan sebagai proses polishing musik.
        Mastering adalah menyamakan gain / besarnya volume sesuai dengan standard broadcast internasional,
        mastering juga dapat diartikan proses dimana kita menyiapkan sebuah file audio yang sudah di mix ke dalam suatu media.
        Media itu sendiri bisa CD, DVD, iTunes, dll. Sedikit perbedaan nya adalah di mastering ini kita agak sedikit dipaksa untuk berhitung.
    </string>

    <string name="mastering_string1"> Tips mastering 1: Perkaya telinga dengan mendengarkan CD-CD referensi</string>
    <string name="mastering_string2">Tips mastering 2: Pada saat mastering audio, dengarkan lagu tersebut dari beberapa posisi</string>
    <string name="mastering_string3"> Tips mastering 3: Dengarkan lagu yang sedang anda mastering pada mode mono</string>
    <string name="mastering_string4">Tips mastering 4: Dengarkan hasil mastering audio lagu anda pada level volume berbeda</string>
    <string name="mastering_string5"> Tips mastering 5: Dengarkan di sound system dan speaker yang berbeda</string>
    <string name="mastering_string6"> Tips mastering 6: Dengarkan lagi keesokan harinya</string>

    <string name="howto">1. Pilih Menu Maps untuk melihat studio musik yang berada didekat kalian.</string>
    <string name="howto1">2. Klik 1x pada marker pengguna untuk melihat informasi jarak radius</string>
    <string name="howto2">3. Jika tidak ada studio musik didekat kalian, Zoom Out melalui panel navigasi disebalah kanan bawah pada map untuk melihat studio musik terdekat.</string>
    <string name="howto3">4. Klik 1x pada marker studio musik terpilih untuk melihat informasi nama dan alamat studio musik.</string>
    <string name="howto4">5. Klik 2x untuk melihat informasi lebih lengkap dari studio musik terpilih.</string>
    <string name="howto5">6. Pilih Menu Call untuk menghubungi pihak studio untuk melakukan booking studio musik.</string>
    <string name="howto6">7. Pilih Menu Share untuk membagi informasi studio musik ke beberapa aplikasi terpilih.</string>
    <string name="howto7">8. Pilih Menu Direction Maps dengan cara klik pada marker kemudian pilih navigasi berwarna biru di kanan bawah.</string>


</resources>
